--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,16 @@ kiwisolver==1.0.1
 Markdown==3.0.1
 matplotlib==2.2.2
 mock==2.0.0
-numpy==1.15.3
+msgpack==0.5.6
+numpy==1.14.5
+olefile==0.44
 opencv-python==3.4.3.18
 pbr==1.10.0
 Pillow==4.3.0
 Polygon3==3.0.8
-protobuf==3.4.0
+protobuf==3.6.0
 public==2.0.1
+pycparser==2.19
 pyOpenSSL==18.0.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
@@ -34,8 +37,8 @@ pytz==2018.4
 readline==6.2.0
 setproctitle==1.1.10
 six==1.10.0
-tensorboard==1.8.0
-tensorflow==1.8.0
+tensorboard==1.10.0
+tensorflow==1.10.0
 termcolor==1.1.0
 this-is==0.0.1
 values==0.0.2
