--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ kiwisolver==1.0.1
 Markdown==3.0.1
 matplotlib==2.2.2
 mock==2.0.0
-msgpack==0.5.6
 numpy==1.14.5
 olefile==0.44
 opencv-python==3.4.3.18
@@ -38,7 +37,7 @@ readline==6.2.0
 setproctitle==1.1.10
 six==1.10.0
 tensorboard==1.10.0
-tensorflow==1.10.0
+tensorflow-gpu==1.10.0
 termcolor==1.1.0
 this-is==0.0.1
 values==0.0.2
